--- a/login.html
+++ b/login.html
@@ -38589,7 +38589,7 @@
       <!-- Close Button -->
       <button id="closePopup" class="close-button">&times;</button>
       <!-- Clickable Image -->
-      <a href="https://example.com" target="_blank">
+      <a href="http://wa.me/8562095254838" target="_blank">
         <img src="image\media\banner\notification.png" alt="Popup Image" class="popup-image">
       </a>
     </div>
